--- a/LMS/Areas/Teachers/Views/Attendance/AttendanceDeatils.cshtml
+++ b/LMS/Areas/Teachers/Views/Attendance/AttendanceDeatils.cshtml
@@ -22,7 +22,7 @@
                                         <h2>Manage <b>Attendance</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
-                                        
+
                                     </div>
                                 </div>
                             </div>
@@ -34,9 +34,9 @@
                                         <th>Session Name</th>
                                         <th>Student Id</th>
                                         <th>Student Name</th>
-                                        <th>Class Name</th>
-                                        <th>Section Name</th>
-                                        <th>Subject Name</th>
+                                        <th>Class</th>
+                                        <th>Section</th>
+                                        <th>Subject</th>
                                         <th>Date</th>
                                         <th>Status</th>
                                         <th>Action</th>
@@ -57,11 +57,11 @@
                                             <td>@item.Status</td>
                                             <td>
                                                 <a href="#editAttendanceModal" class="edit" id="edit" data-toggle="modal">
-                                                    <i class="material-icons"  title="" data-original-title="Edit"></i>
+                                                    <i class="material-icons" title="" data-original-title="Edit"></i>
                                                 </a>
 
                                                 <a href="#deleteAttendanceModal" class="delete" id="delete" data-toggle="modal">
-                                                    <i class="material-icons"  title="" data-original-title="Delete"></i>
+                                                    <i class="material-icons" title="" data-original-title="Delete"></i>
                                                 </a>
 
                                                 @*Added BY Absar To get parentid*@
@@ -77,7 +77,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
 
                     <!-- Edit Modal HTML -->
                     <div id="editAttendanceModal" class="modal fade">
@@ -93,7 +93,7 @@
                                             <label>Attendance ID</label>
                                             <input type="text" class="form-control" required="" id="Attendance_Id" disabled="disabled">
                                         </div>
-                                        
+
                                         <div class="form-group">
                                             <label>Student Id </label>
                                             <input type="text" class="form-control" required="" name="Student_Id" id="Student_Id">
@@ -108,7 +108,7 @@
                                                 <option value="Absent">Absent</option>
                                                 <option value="Present">Present</option>
                                                 <option value="Leave">Leave</option>
-                                                
+
                                             </select>
                                         </div>
                                     </div>
@@ -192,8 +192,8 @@
 
 
 <!--   Core JS Files   -->
-<script src="~/Dashboard/assets/jqueryDataTable/jquery.min.js"></script>
-<script src="~/Dashboard/assets/jqueryDataTable/jquery.dataTables.js"></script>
+<script src="~/Dashboard/assets/js/core/jquery-3.5.1.js"></script>
+<script src="~/Dashboard/assets/datatables.net/js/jquery.dataTables.min.js"></script>
 <link href="~/Dashboard/assets/js/toastr/toastr.css" rel="stylesheet" />
 <script src="~/Dashboard/assets/js/toastr/toastr.js"></script>
 <script>
@@ -238,7 +238,7 @@
                 url: '/teachers/attendance/editAttendance/' + Attendance_Id,
                 success: function (objAttendance) {
 
-                    
+
 
                     $('#editAttendanceModal #Attendance_Id').val(objAttendance.attendance_Id);
                     $('#editAttendanceModal #Student_Id').val(objAttendance.student_Id);
@@ -251,10 +251,44 @@
         });
 
 
-        $('#AttendanceDetailPage').dataTable({
-            /* Disable initial sort */
-            "aaSorting": []
+        //$('#AttendanceDetailPage').dataTable({
+        //    /* Disable initial sort */
+        //    "aaSorting": []
+        //});
+
+        $('#AttendanceDetailPage').DataTable({
+
+            //"paging": false,
+            "fixedHeader": { header: true, footer: true },
+
+            //responsive: false,
+            //autoWidth: false,
+            //aaSorting: [[2, 'asc']],
+            //cache: true,
+
+
+            initComplete: function () {
+                this.api().columns([2, 3,4,5,6]).every(function () {
+                    var column = this;
+                    var select = $(' <select><option value="">ALL</option></select>')
+                        .appendTo($(column.header()).empty())
+                        .on('change', function () {
+                            var val = $.fn.dataTable.util.escapeRegex(
+                                $(this).val()
+                            );
+
+                            column
+                                .search(val ? '^' + val + '$' : '', true, false)
+                                .draw();
+                        });
+
+                    column.data().unique().sort().each(function (d, j) {
+                        select.append('<option value="' + d + '">' + d + '</option>')
+                    });
+                });
+            }
         });
+
 
     });
 </script>
