--- a/LMS/Areas/Teachers/Views/Class/Lectures.cshtml
+++ b/LMS/Areas/Teachers/Views/Class/Lectures.cshtml
@@ -31,8 +31,8 @@
                             <table id="classpage" class="display" style="width:100%">
                                 <thead>
                                     <tr>
-                                        <th>Lecture ID</th>
-                                        <th>Lecture Name</th>
+                                        <th>Lesson ID</th>
+                                        <th>Lesson Name</th>
                                         <th>Date</th>
                                         <th>Action</th>
                                     </tr>
@@ -43,7 +43,7 @@
                                     <tr>
                                         <td>@item.Lecture_Id</td>
                                         <td>@item.Lecture_Name</td>
-                                        <td>@item.LecturePost_Date</td>
+                                        <td>@(DateTime.ParseExact(item.LecturePost_Date, "yyyyMMd", null).ToShortDateString())</td>
                                         <td style="font-size:16px;">
                                             <a asp-controller="lecture" asp-action="editLecture" asp-route-id="@item.Lecture_Id" class="edit" id="edit" >
                                                 <i class="fas fa-pen"></i>
