--- a/LMS/Areas/Teachers/Views/Test/EditTest.cshtml
+++ b/LMS/Areas/Teachers/Views/Test/EditTest.cshtml
@@ -1,6 +1,6 @@
-﻿@model LMS.Domain.ViewModels.TestViewModel
+﻿@model LMS.Domain.Test
 @{
-    ViewData["Title"] = "AddTest";
+    ViewData["Title"] = "EditTest";
     Layout = "~/Areas/Teachers/Views/Shared/_TeacherLayout.cshtml";
 }
 
@@ -11,10 +11,10 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header">
-                    <h5 class="title">Add Assessment</h5>
+                    <h5 class="title">Edit Assessment</h5>
                 </div>
                 <div class="card-body">
-                    <form asp-controller="Test" asp-action="AddTest">
+                    <form asp-controller="Test" asp-action="EditTest" asp-area="teachers">
                         <div class="row">
                             <div class="col-md-6 pr-1">
                                 <div class="form-group">
@@ -57,13 +57,22 @@
                             <div class="col-md-6 pr-1">
                                 <div class="form-group">
                                     <label>Start Time</label>
-                                    <input asp-for="Start_Time" type="time" class="form-control">
+                                    @{
+                                        var S_Time = Model.Start_Time;
+                                        DateTime Start_Time = DateTime.ParseExact(S_Time, "HHmmss", null);
+                                    }
+                                    <input asp-for="@Start_Time" type="time" class="form-control">
                                 </div>
                             </div>
                             <div class="col-md-6 pl-1">
                                 <div class="form-group">
                                     <label>End Time</label>
-                                    <input asp-for="End_Time" type="time" class="form-control">
+                                    @{
+                                        var E_Time = Model.End_Time;
+                                        DateTime End_Time = DateTime.ParseExact(E_Time, "HHmmss", null);
+
+                                    }
+                                    <input asp-for="@End_Time" type="time" class="form-control">
                                 </div>
                             </div>
 
@@ -72,13 +81,17 @@
                         <div class="row">
                             <div class="col-md-6 pr-1">
                                 <div class="form-group">
-                                    <label>Assessment Date</label>
-                                    <input asp-for="Assessment_Date" type="date" class="form-control">
+                                    <label>Assessment Datee</label>
+                                    @{
+                                        var A_Date = Model.Assessment_Date;
+                                        DateTime Assessment_Date = DateTime.ParseExact(A_Date, "yyyyMMdd", null).Date;
+                                    }
+                                    <input asp-for="@Assessment_Date" type="date" class="form-control">
                                 </div>
                             </div>
                             <div class="col-md-6 pl-1">
                                 <div class="form-group">
-                                    <label>Assessment Status</label>
+                                    <label>End Time</label>
                                     <select id="ddlAssessmentStatus" asp-for="Assessment_Status" class="form-control">
                                         <option value="-1">--Select--</option>
                                         <option value="1">Active</option>
@@ -120,7 +133,10 @@
                         <div class="row">
                             <div class="col-md-2">
                                 <div class="form-group">
-                                    <button class="btn btn-primary btn-block">Submit</button>
+
+                                    <input type="hidden" asp-for="Test_Id" />
+
+                                    <button type="submit" class="btn btn-primary">Update</button>
                                 </div>
                             </div>
                         </div>
@@ -130,5 +146,4 @@
         </div>
     </div>
 </div>
-
 
